# oxide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
config/: abilities.yaml  commands.yaml  customization_item_mappings.json  customization_item_mappings.yaml  customizations.json  customizations.yaml  default_sabers.json  default_sabers.yaml  enemy_types.yaml  item_categories.json  item_categories.yaml  item_classes.json  item_classes.yaml  item_groups.json  item_groups.yaml  items.json  items.yaml  manifests.json  manifests.yaml  minigames.json  minigames.yaml  mounts.json  mounts.yaml  navmeshes.yaml  quick_chats.json  required_slots.json  sales.json  sales.yaml  server.json  server.yaml  zones.json  zones.yaml
config/items/: boosts.yaml
config/items/character_customizations/: eye_colors.yaml  facial_hair.yaml  hair_colors.yaml  hair_styles.yaml  patterns.yaml  skin_tones.yaml  species.yaml
config/items/gear/: bounty_hunter.yaml  clone_trooper.yaml  costume.yaml  jedi.yaml  other_eras.yaml  planetary_forces.yaml  republic.yaml  retired.yaml  separatist.yaml  unreleased.yaml
config/items/housing/: items.yaml
config/zones/jedi_temple/: ambient_npcs.yaml  button_ids.yaml  dialogs.yaml  doors.yaml  jedi_temple.yaml  lifeday_orbs.yaml  transports.yaml
crates/asset_serialize/: Cargo.toml
crates/asset_serialize/src/: adr.rs  bvh.rs  cdt.rs  gcnk.rs  lib.rs  pack.rs
crates/bvh/: Cargo.toml
crates/bvh/src/: lib.rs
crates/packet_serialize_derive/: Cargo.toml
crates/packet_serialize_derive/src/: serialize.rs
src/: channel_manager.rs  deserialize.rs  hash.rs  login.rs  main.rs  protocol.rs  reliable_data_ops.rs  serialize.rs
src/asset_cache/: mod.rs  navmesh.rs
src/asset_serialize/: Cargo.toml
src/asset_serialize/src/: adr.rs  lib.rs  pack.rs
src/asset_server/: mod.rs
src/config/: mod.rs
src/game_server/: character_guid.rs  chat.rs  client_update_packet.rs  combat_update_packet.rs  command.rs  game_packet.rs  guid.rs  housing.rs  inventory.rs  item.rs  lock_enforcer.rs  login.rs  mod.rs  mount.rs  player_data.rs  player_update_packet.rs  portrait.rs  purchase.rs  reference_data.rs  store.rs  time.rs  tunnel.rs  ui.rs  update_position.rs  zone.rs
src/game_server/assets/: mod.rs  navmesh.rs
src/game_server/handlers/: ability.rs  character.rs  chat.rs  chat_command.rs  (+28 more)
src/http/: mod.rs
src/packet_serialize/: Cargo.toml
src/packet_serialize_derive/: Cargo.toml
src/protocol/: deserialize.rs  hash.rs  mod.rs  reliable_data_ops.rs  serialize.rs
(+75 files in other folders)
