[package]
name = "cwa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
byteorder = "1.5.0"
chrono = "0.4.38"
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
defer-lite = "1.0.0"
evalexpr = "11.3.0"
packet_serialize = { path = "src/packet_serialize" }
miniz_oxide = "0.7.2"
num_enum = "0.7.2"
parking_lot = "0.12.1"
rand = "0.8.5"
serde_json = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"] }
