[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.3"
byteorder = "=1.5.0"
chrono = "=0.4.40"
crc32fast = "=1.4.2"
crossbeam-channel = "=0.5.14"
defer-lite = "=1.0.0"
evalexpr = "=12.0.2"
packet_serialize = { path = "src/packet_serialize" }
miniz_oxide = "=0.8.5"
num_enum = "=0.7.3"
parking_lot = "=0.12.3"
rand = "=0.9.0"
rand_distr = "=0.5.1"
serde_json = "=1.0.140"
serde = { version = "=1.0.219", features = ["derive", "rc"] }
strum = { version = "=0.27.1", features = ["derive"] }
tokio = { version = "=1.44.1", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"] }
