[package]
name = "cwa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
asset_serialize = { path = "crates/asset_serialize" }
axum = "0.7.5"
byteorder = "1.5.0"
chrono = "0.4.38"
clap = { version = "4.5.51", features = ["derive"] }
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
defer-lite = "1.0.0"
enum-iterator = "2.1.0"
evalexpr = "11.3.0"
packet_serialize = { path = "crates/packet_serialize" }
priority-queue = "2.7.0"
miniz_oxide = "0.7.2"
num_enum = "0.7.2"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"
shlex = "1.3"
serde_yaml = "0.9.34"
serde = { version = "1.0.196", features = ["derive", "rc"] }
tokio = { version = "1.38.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"] }
walkdir = "2.5.0"
