[package]
name = "asset_serialize"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.41", features = ["tokio", "zlib"] }
num_enum = "0.7.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "io-util", "rt"] }
walkdir = "2.5.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros"] }
